--- a/local.properties
+++ b/local.properties
@@ -2,6 +2,7 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Sun Sep 11 09:09:49 MDT 2016
-sdk.dir=/Users/kaleb/Library/Android/sdk
+# For customization when using a Version Control System, please read the
+# header note.
+#Mon Jul 08 22:11:29 CST 2019
+sdk.dir=C\:\\Users\\10110038\\AppData\\Local\\Android\\Sdk
