--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     implementation 'org.apache.commons:commons-csv:1.4'
     implementation 'com.github.KalebKE:FSensor:v1.2.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    implementation 'lib.kashif:folderpicker:2.4'
 }
